--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
 
   <!-- HEADER -->
   <header>
-    <img src="profile.jpg" alt="Yam-Yam Profile" class="profile-img">
     <h1 id="name"></h1>
     <p>Mahasiswa Teknik Informatika | Teknologi & Mekanik</p>
-    
-    <!-- Dark Mode Toggle -->
-    <button id="darkModeToggle" class="btn">🌙 Dark Mode</button>
-    
     <a href="#contact" class="btn">Hubungi Saya</a>
   </header>
 
@@ -24,9 +19,10 @@
   <section id="about">
     <h2>Tentang Saya</h2>
     <p>
-      Halo! Saya <b>Yam-Yam</b>, seorang mahasiswa Teknik Informatika dari Tasikmalaya.
+      Halo! Saya <b>Muhammad Ramlan</b>, biasa dipanggil <b>Yam-Yam</b>, seorang mahasiswa Teknik Informatika dari Tasikmalaya.
       Saya memiliki keahlian dalam memperbaiki motor, komputer, dan HP.  
-      Saya tertarik pada teknologi baru dan senang belajar serta berbagi pengalaman.
+      Saya juga seorang gamer yang aktif di server roleplay dan senang mengeksplorasi dunia game.  
+      Hobi saya termasuk bermain game seperti GTA, Mobile Legends, Minecraft, serta touring dan belajar teknologi baru.
     </p>
   </section>
 
@@ -47,17 +43,14 @@
     <div class="projects">
       <div class="card">
         <h3>💻 Website Profil</h3>
-        <img src="website.jpg" alt="Website Profil" class="portfolio-img">
         <p>Membuat website pribadi menggunakan HTML, CSS, dan GitHub Pages sebagai hosting gratis.</p>
       </div>
       <div class="card">
         <h3>⚙️ Proyek Mekanik</h3>
-        <img src="mechanic.jpg" alt="Proyek Mekanik" class="portfolio-img">
         <p>Mengelola dan memperbaiki kendaraan serta perangkat mekanik secara profesional.</p>
       </div>
       <div class="card">
         <h3>🖥️ Sistem Komputer</h3>
-        <img src="computer.jpg" alt="Sistem Komputer" class="portfolio-img">
         <p>Membangun, memperbaiki, dan merawat komputer serta jaringan komputer sederhana.</p>
       </div>
     </div>
