--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section id="about">
     <h2>Tentang Saya</h2>
     <p>
-      Halo! Saya <b>Muhammad Ramlan</b>, biasa dipanggil <b>Yam-Yam</b>, seorang mahasiswa Teknik Informatika dari Tasikmalaya.
+      Halo! Saya <b>Muhammad Ramlan</b>, biasa dipanggil <b>Yam-Yam</b>, seorang mahasiswa Teknik Informatika dari Kota Tasikmalaya.
       Saya memiliki keahlian dalam memperbaiki motor, komputer, dan HP.  
       Saya juga seorang gamer yang aktif di server roleplay dan senang mengeksplorasi dunia game.  
       Hobi saya termasuk bermain game seperti GTA, Mobile Legends, Minecraft, serta touring dan belajar teknologi baru.
@@ -61,9 +61,9 @@
     <h2>Kontak</h2>
     <p>Ingin berkolaborasi atau sekadar ngobrol? Hubungi saya di:</p>
     <ul>
-      <li>📧 <a href="mailto:ramlanfahmi03@gmail.com">ramlanfahmi03@gmail.com</a></li>
-      <li>💬 <a href="https://wa.me/628xxxxx" target="_blank">WhatsApp</a></li>
-      <li>🐙 <a href="https://github.com/yam-yam17" target="_blank">GitHub</a></li>
+      <li>📧 <a href="mailto:mhmmdramlan1633@gmail.com">mhmmdramlan1633@gmail.com</a></li>
+      <li>💬 <a href="https://wa.me/62895622039852" target="_blank">WhatsApp</a></li>
+      <li>🐙 <a href="https://https://github.com/reksaaa666" target="_blank">GitHub</a></li>
     </ul>
 
     <!-- Form Kontak -->
