--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section id="about">
     <h2>Tentang Saya</h2>
     <p>
-      Halo! Saya <b>Muhammad Ramlan</b>, biasa dipanggil <b>Yam-Yam</b>, seorang mahasiswa Teknik Informatika dari Kota Tasikmalaya.
+      Halo! Saya <b>Muhammad Ramlan</b>, biasa dipanggil <b>Yam-Yam</b>, seorang mahasiswa Teknik Informatika dari Tasikmalaya.
       Saya memiliki keahlian dalam memperbaiki motor, komputer, dan HP.  
       Saya juga seorang gamer yang aktif di server roleplay dan senang mengeksplorasi dunia game.  
       Hobi saya termasuk bermain game seperti GTA, Mobile Legends, Minecraft, serta touring dan belajar teknologi baru.
@@ -62,17 +62,9 @@
     <p>Ingin berkolaborasi atau sekadar ngobrol? Hubungi saya di:</p>
     <ul>
       <li>📧 <a href="mailto:mhmmdramlan1633@gmail.com">mhmmdramlan1633@gmail.com</a></li>
-      <li>💬 <a href="https://wa.me/62895622039852" target="_blank">WhatsApp</a></li>
-      <li>🐙 <a href="https://https://github.com/reksaaa666" target="_blank">GitHub</a></li>
+      <li>💬 <a href="https://wa.me/62895622039852" target="_blank">0895622039852</a></li>
+      <li>🐙 <a href="https://github.com/reksaaa666" target="_blank">GitHub</a></li>
     </ul>
-
-    <!-- Form Kontak -->
-    <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-      <input type="text" name="name" placeholder="Nama Kamu" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <textarea name="message" placeholder="Pesan..." required></textarea>
-      <button type="submit">Kirim Pesan</button>
-    </form>
   </section>
 
   <!-- FOOTER -->
