--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <p>
       Halo! Saya <b>Muhammad Ramlan</b>, biasa dipanggil <b>Yam-Yam</b>, seorang mahasiswa Teknik Informatika dari <b>Tasikmalaya</b>.  
       Sejak kecil, saya selalu tertarik dengan teknologi dan bagaimana segala sesuatu bekerja, baik itu komputer, perangkat elektronik, maupun kendaraan.  
-      Keingintahuan ini membuat saya aktif belajar memperbaiki motor, komputer, dan HP secara mandiri.  
+      Keingintahuan ini membuat saya aktif belajar memperbaiki motor, komputer, dan HP secara mandiri.<br><br>  
 
       Di sisi lain, saya juga seorang gamer yang menikmati tantangan dalam dunia game, terutama roleplay dan strategi.  
-      Bermain game tidak hanya hiburan bagi saya, tapi juga sarana belajar berpikir kritis, kreatif, dan kerja tim.  
+      Bermain game tidak hanya hiburan bagi saya, tapi juga sarana belajar berpikir kritis, kreatif, dan kerja tim.<br><br>  
 
       Hobi saya selain bermain game meliputi touring, menjelajah tempat baru, dan terus mengikuti perkembangan teknologi.  
       Saya percaya kombinasi antara kemampuan teknis, kreativitas, dan semangat belajar membuat saya siap menghadapi berbagai tantangan di dunia profesional.
