--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
   <section id="portfolio">
     <h2>Portofolio</h2>
     <div class="projects">
-      <div class="card">
+      <div class="">
         <h3>💻 Website Profil</h3>
         <p>Membuat website pribadi menggunakan HTML, CSS, dan GitHub Pages sebagai hosting gratis.</p>
       </div>
-      <div class="card">
+      <div class="">
         <h3>⚙️ Proyek Mekanik</h3>
         <p>Mengelola dan memperbaiki kendaraan serta perangkat mekanik secara profesional.</p>
       </div>
-      <div class="card">
+      <div class="">
         <h3>🖥️ Sistem Komputer</h3>
         <p>Membangun, memperbaiki, dan merawat komputer serta jaringan komputer sederhana.</p>
       </div>
