--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p>Ingin berkolaborasi atau sekadar ngobrol? Hubungi saya di:</p>
     <ul>
       <li>📧 <a href="mailto:mhmmdramlan1633@gmail.com">mhmmdramlan1633@gmail.com</a></li>
-      <li>💬 <a href="https://wa.me/62895622039852" target="_blank">0895622039852</a></li>
+      <li>💬 <a href="https://wa.me/62895622039852" target="_blank">Whatsapp</a></li>
       <li>🐙 <a href="https://github.com/reksaaa666" target="_blank">GitHub</a></li>
     </ul>
   </section>
