--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <p>Ingin berkolaborasi atau sekadar ngobrol? Hubungi saya di:</p>
     <ul>
       <li>📧 <a href="mailto:mhmmdramlan1633@gmail.com">Email</a></li>
-      <li>📧 <a href="https://www.instagram.com/mhmmdramlannn">Instagram</a></li>
+      <li>📧 <a href="https://www.instagram.com/mhmmdramlannn" target="_blank">Instagram</a></li>
       <li>💬 <a href="https://wa.me/62895622039852" target="_blank">Whatsapp</a></li>
       <li>🐙 <a href="https://github.com/reksaaa666" target="_blank">GitHub</a></li>
     </ul>
